OSSN - OPEN SOURCE SOCIAL NETWORK 3.4-development

Bugfixes:

* Hook for changing plugin type isn't working.
* One uneeded redirection when login #516
* Remove chart legend code form chart.min.js #517
* Photos limit issue, only 10 displays #523
* Youtube https in ossnembed.lib.php #519


Enhancement:

* Added new hook 'plugin, view:type'.
* Remove hook 'plugins, type'.
* Move system/default to system/plugins/default
* Open link in new tab #518
* Default order for entities , objects, annotations must be by their primary id.

OSSN - OPEN SOURCE SOCIAL NETWORK 3.3

Bugfixes:

* When installing components it show success for lower version #510
* Fresh installation of v3.2 still shows old version, v3.0, Reported by Softaculous Team.
* Improve component installer language strings.


OSSN - OPEN SOURCE SOCIAL NETWORK 3.2

Bugfixes:

* Ossn v3.0 components versions compatibility issue on v3.x
* Fix typo in language strings.

Thanks to David Orwig for reporting issues https://www.opensource-socialnetwork.org/u/David111567

OSSN - OPEN SOURCE SOCIAL NETWORK 3.1

Bugfixes:

* Site pages didn't updating pages #482
* Privacy option is empty #481
* Fix old views paths to new plugin paths #483
* Ossn notification 'mark as read' missing translation #484
* Security fix : if user is deleted logout from his session.
* Can't install v3 on host having port #485
* Blank post when have a tabulation in text #494
* HTTP external css in themes with HTTPS site #495
* Home link in main site and admin top bar #499
* Security fix: FollowSymlinks does not protect against malicious links into other domain's directories, 
  use +SymLinksIfOwnerMatch. (reported by https://github.com/hazyapps)  #507 
* View all comments shows 10 comments only.

OSSN - OPEN SOURCE SOCIAL NETWORK 3.01

Bugfixes:

* Exception 'OssnDatabaseException' with message 'Column 'id' in order clause is ambiguous

OSSN - OPEN SOURCE SOCIAL NETWORK 3.0

Changes from 3.0 development till stable version:

Bugfixes:
